[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/GameOver/game_over.png" type="Texture" id=1]
[ext_resource path="res://resources/fonts/joystix monospace.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://resources/fonts/joystix.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/GameOver/GameOver.gd" type="Script" id=4]
[ext_resource path="res://scenes/Transition/Transition.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/sfx/nuclear_explosion.ogg" type="AudioStream" id=6]
[ext_resource path="res://resources/sfx/game_over.ogg" type="AudioStream" id=7]
[ext_resource path="res://resources/animated_textures/red_circle_out.tres" type="Texture" id=8]
[ext_resource path="res://resources/solstice_ui_theme.tres" type="Theme" id=9]







[sub_resource type="DynamicFont" id=1]
size = 10
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -4
extra_spacing_bottom = -3
font_data = ExtResource( 2 )

[node name="GameOver" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 128, 96 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = 24.0
margin_right = 224.0
margin_bottom = 44.0
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 1 )
custom_constants/shadow_offset_x = 0
custom_constants/line_spacing = 10
custom_constants/shadow_as_outline = 0
text = "Your droid is destroyed.
The world is doomed..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 92.0
margin_top = 80.0
margin_right = 164.0
margin_bottom = 85.0
theme = ExtResource( 9 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.698039, 0.862745, 0.937255, 1 )
text = "GAME OVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="VoiceTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="CircleTransition" parent="." instance=ExtResource( 5 )]
circle_in = ExtResource( 8 )

[node name="ExplosionAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="VoiceAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "SFX"
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="VoiceTimer" to="." method="_on_VoiceTimer_timeout"]
[connection signal="fadein_finished" from="CircleTransition" to="." method="_on_CircleTransition_fadein_finished"]
[connection signal="fadeout_finished" from="CircleTransition" to="." method="_on_CircleTransition_fadeout_finished"]
